# superStereo

./: .gitignore  CMakeLists.txt  NDTmap.h  README.md  haomiao.md  main_NDTmap.cpp  map_construct.hpp  matchingTest.cc  ndtmap.csv  open3d.cc  open3d_cuda.cpp  open3d_ndt.cc  open3d_ndt_array.cc
MapSrc/: CMakeLists.txt  csv2pcd.cpp  geoHashOp.cpp  mapLoad.cpp  mapLoad.h  mapPackage.cpp
NINESQUARE_NDT_MAP/: NINESQUARE_NDT_MAP.csv
cuda_test/: cudatest  cudatest.cu  matrix  matrix.cu
gmm/: CMakeLists.txt  EM.cpp
pcd_data/: highway4.pcd
voxel_grid_generate/: CMakeLists.txt  compare.csv  compare.ipynb  mapCompare.cpp  ompmap.csv  voxel_generate.cpp  voxel_grid_covariance_omp.h  yydmap.csv
